Fixing layout issues on visual tool, fixing description summarization on language pipeline and adding evaluation on STS-B for language pipeline

--- a/tainacan_collection/assets/style.css
+++ b/tainacan_collection/assets/style.css
@@ -399,8 +399,8 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 /* Hover box arrow */
-[class*="jsx-"]::before,
-[class*="jsx-"]::after {
+[class*="jsx-"]:not(#aba-agrupamentos):not(#aba-timeline):not(#aba-mapa)::before,
+[class*="jsx-"]:not(#aba-agrupamentos):not(#aba-timeline):not(#aba-mapa)::after {
   display: none !important;
   border: none !important;
   content: none !important;
